Fixed unreadable font

--- a/wwwroot/css/coolButton.css
+++ b/wwwroot/css/coolButton.css
@@ -14,7 +14,7 @@
     text-decoration: none;
     box-shadow: 0 0 0 1px inset rgba(236, 232, 225, 0.3);
     position: relative;
-    font-family: Comic Sans MS, Comic Sans, cursive;
+    font-family: Comic Sans MS, Comic Sans;
     font-weight: 900;
 }
 
