--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -6,7 +6,7 @@ for details on configuring this project to bundle and minify static web assets. 
 }
 
 .space-font {
-    font-family: Comic Sans MS, Comic Sans, cursive;
+    font-family: Comic Sans MS, Comic Sans;
     font-style: italic;
 }
 
@@ -18,25 +18,25 @@ a.navbar-brand {
     white-space: normal;
     text-align: center;
     word-break: break-all;
-    font-family: Comic Sans MS, Comic Sans, cursive;
+    font-family: Comic Sans MS, Comic Sans;
     font-style: italic;
     font-size: 25pt;
     color: lightgoldenrodyellow !important;
 }
 
 h1 {
-    font-family: Comic Sans MS, Comic Sans, cursive;
+    font-family: Comic Sans MS, Comic Sans;
     font-style: italic;
     color: lightgoldenrodyellow;
 }
 
 h2, h3, h4, h5, h6 {
-    font-family: Comic Sans MS, Comic Sans, cursive;
+    font-family: Comic Sans MS, Comic Sans;
 }
 
 .nav-link {
     font-size: 20pt;
-    font-family: Comic Sans MS, Comic Sans, cursive;
+    font-family: Comic Sans MS, Comic Sans;
 }
 
 .home-hr {
@@ -105,7 +105,7 @@ body {
     margin-bottom: 60px;
     background-color: #5677ae;
     color: lightcyan;
-    font-family: Comic Sans MS, Comic Sans, cursive;
+    font-family: Comic Sans MS, Comic Sans;
     font-weight: 400
 }
 
@@ -117,7 +117,7 @@ body {
     line-height: 60px; /* Vertically center the text there */
     font-size: 22pt;
     color: aliceblue;
-    font-family: Comic Sans MS, Comic Sans, cursive;
+    font-family: Comic Sans MS, Comic Sans;
 }
 
 .sub-text {
